[tool.poetry]
name = "curso-ebac-backend"
version = "0.1.0"
description = "Curso Ebac Backend"
authors = ["Atilio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
